--- a/history/pitfalls.html
+++ b/history/pitfalls.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-24 Sat 17:28 -->
+<!-- 2025-05-24 Sat 18:06 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>3 pitfalls to avoid in reading Indian history ✅</title>
@@ -202,11 +202,11 @@ Three pitfalls I&rsquo;ve observed among people who talk about Indian history:
 </p>
 
 <p>
-<b>Wikipedia University.</b> &ldquo;Wikipedia University&rdquo; should be seen as just as cringe as relying on &ldquo;WhatsApp University&rdquo;. Wikipedia has its own ugly and cliquey politics under the hood (plus some projects activists demand be emphasized like &ldquo;Women in Red&rdquo; and &ldquo;WikiProject Africa&rdquo;), and navigating its social politics is a nuisance to anyone seeking to actually understand truths. Even by design, it can only reflect mainstream academic consensus at best, and mainstream Indology today is just not very competent. See <a href="/history/myths/intro.org">history/myths/intro.org</a>.
+<b>Wikipedia University.</b> &ldquo;Wikipedia University&rdquo; should be seen as just as cringe as relying on &ldquo;WhatsApp University&rdquo;. Wikipedia has its own ugly and cliquey politics under the hood (plus some projects activists demand be emphasized like &ldquo;Women in Red&rdquo; and &ldquo;WikiProject Africa&rdquo;), and navigating its social politics is a nuisance to anyone seeking to actually understand truths. Even by design, it can only reflect mainstream academic consensus at best, and mainstream Indology today is just not very competent. See <a href="/history/myths/intro.html">history/myths/intro.org</a>.
 </p>
 
 <p>
-<b>Not knowing where to find signal amongst the noise.</b> Not knowing what the actually good sources are on Indian history (it&rsquo;s neither Irfan Habib nor some schizo Swarajya writer, but competent folks mostly from before the 1970s, like RC Majumdar), or reliable repositories of primary source full texts and archaeological artefacts. See <a href="/history/sources/primary.org">history/sources/primary.org</a>.
+<b>Not knowing where to find signal amongst the noise.</b> Not knowing what the actually good sources are on Indian history (it&rsquo;s neither Irfan Habib nor some schizo Swarajya writer, but competent folks mostly from before the 1970s, like RC Majumdar), or reliable repositories of primary source full texts and archaeological artefacts. See <a href="/history/sources/primary.html">history/sources/primary.org</a>.
 </p>
 
 <p>
@@ -218,12 +218,12 @@ If you&rsquo;re going around searching for a Shiva temple, or (a favourite) &ldq
 </p>
 
 <p>
-Perhaps relatedly, it helps to have a comparative context so you don&rsquo;t run around trying to explain things that aren&rsquo;t even notable on a global context, e.g. the whole discourse around historical foreign invasions of India (ironically, such insularism <i>is</i> one of the few weaknesses truly unique to Indian civilization). See <a href="/history/features.org">history/features.org</a>.
+Perhaps relatedly, it helps to have a comparative context so you don&rsquo;t run around trying to explain things that aren&rsquo;t even notable on a global context, e.g. the whole discourse around historical foreign invasions of India (ironically, such insularism <i>is</i> one of the few weaknesses truly unique to Indian civilization). See <a href="/history/features.html">history/features.org</a>.
 </p>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-24 Sat 17:28</p>
+<p class="date">Created: 2025-05-24 Sat 18:06</p>
 </div>
 </body>
 </html>
