--- a/history/sources/primary.html
+++ b/history/sources/primary.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-24 Sat 17:28 -->
+<!-- 2025-05-24 Sat 18:06 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>A catalog of ancient Indian literary sources ❗</title>
@@ -317,7 +317,7 @@ Something I&rsquo;d quite like to see is a fully functional and complete portal 
 <ul class="org-ul">
 <li><code>//kautilya</code> Kautilya&rsquo;s Arthaśāstra (c. 300 BC). Full text &amp; Skt from <a href="http://wisdomlib.org/">wisdomlib.org</a> (<a href="https://www.wisdomlib.org/hinduism/book/kautilya-arthashastra">Shamashastry</a>)</li>
 <li><code>//kamandaki</code> Kāmandakī&rsquo;s Nītisāra (c. 300 BC). Full texts from <a href="http://archive.org/">archive.org</a> (<a href="https://archive.org/details/kamandakiyanitis00kamarich/page/n7/mode/2up">Manmatha Nath Dutt</a>, <a href="https://archive.org/details/in.ernet.dli.2015.196169/page/n119/mode/2up">Rajendralala Mitra</a>)</li>
-<li><code>//sukra</code> Śukranītisāra (c. 300). Full texts from <a href="http://archive.org/">archive.org</a> (<a href="https://archive.org/details/Sukra_Niti_Sara/page/n105/mode/2up">BK Sarkar &#x2014; partial translation</a>, <a href="https://archive.org/details/onweaponsarmyor00oppegoog/page/n3/mode/2up">Gustav Oppert &#x2014; SS</a>); full Skt from <a href="http://archive.org/">archive.org</a> (<a href="/history/sources/primary.org">history/sources/primary.org</a>)</li>
+<li><code>//sukra</code> Śukranītisāra (c. 300). Full texts from <a href="http://archive.org/">archive.org</a> (<a href="https://archive.org/details/Sukra_Niti_Sara/page/n105/mode/2up">BK Sarkar &#x2014; partial translation</a>, <a href="https://archive.org/details/onweaponsarmyor00oppegoog/page/n3/mode/2up">Gustav Oppert &#x2014; SS</a>); full Skt from <a href="http://archive.org/">archive.org</a> (<a href="/history/sources/primary.html">history/sources/primary.org</a>)</li>
 <li><code>//vaisampayana</code> Vaiśampāyana&rsquo;s Nītiprakāśikā (c. 180 BC). Full text &amp; Skt from <a href="http://wisdomlib.org/">wisdomlib.org</a> (<a href="https://www.wisdomlib.org/hinduism/essay/nitiprakasika-critical-analysis">Critical Ed</a>)</li>
 </ul></li>
 <li><code>/smrti</code> Dharmaśāstra (Smr̥ti texts) &#x2014; full Skts from the Smr̥ti Sandarbha (<a href="https://archive.org/details/smriti-sandarbha-gurumandal-series/Smriti%20Sandarbha%20Part%201%20-%20Gurumandal%20Series%201952/page/12/mode/2up">archive.org</a>, <a href="http://www.astrojyoti.com/smritisanskrit.htm">astrojyoti.com</a>); English translations available for the popular ones:
@@ -383,7 +383,7 @@ Something I&rsquo;d quite like to see is a fully functional and complete portal 
 <li><code>//yogayajnavalkya</code> Yoga-Yājñavalkya (c. 100 BC). Full Skt from <a href="https://archive.org/details/Divanji1954/mode/2up">archive.org</a>.</li>
 <li><code>//mimamsa</code> Mīmāṁsā Sūtra (600&#x2014;180 BC). Full text &amp; Skt from <a href="https://www.google.com/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=web&amp;cd=&amp;cad=rja&amp;uact=8&amp;ved=2ahUKEwio2qPNp7SBAxWMRmwGHZ1rBvoQFnoECA4QAQ&amp;url=https%3A%2F%2Farchive.org%2Fdetails%2Fmimamsasutra00jaimuoft&amp;usg=AOvVaw3L_TsBt-SkhRJ7kZvtnkO_&amp;opi=89978449">archive.org</a>.</li>
 <li><code>//vedanta</code> Brahma (or Vedānta) Sūtras (600&#x2014;180 BC). Full text &amp; Skt from <a href="https://archive.org/details/BrahmasutraMadhvaEnglish/mode/2up">archive.org</a>.</li>
-<li><code>//gita</code> Bhagavad Gītā (320 or 180 BC). Full text &amp; Skt from <a href="https://www.wisdomlib.org/hinduism/book/shrimad-bhagavad-gita">wisdomlib.org</a>, <a href="/history/sources/primary.org">history/sources/primary.org</a>.</li>
+<li><code>//gita</code> Bhagavad Gītā (320 or 180 BC). Full text &amp; Skt from <a href="https://www.wisdomlib.org/hinduism/book/shrimad-bhagavad-gita">wisdomlib.org</a>, <a href="/history/sources/primary.html">history/sources/primary.org</a>.</li>
 <li><code>//carvaka</code> Cārvāka sūtras (compiled 600&#x2014;200 BC), surviving fragments from RK Bhattacharya. Library access from <a href="https://www.jstor.org/stable/23496944">JSTOR</a>; Full texts &amp; Skt from <a href="https://www.academia.edu/7851256/C%C4%81rv%C4%81ka_Fragments_A_New_Collection">academia.edu</a>, <a href="https://www.researchgate.net/publication/233567550_Carvaka_Fragments_A_New_Collection">researchgate.net</a>.</li>
 </ul>
 </div>
@@ -588,7 +588,7 @@ Some useful general resources regarding the scope and size of Indian literature.
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-24 Sat 17:28</p>
+<p class="date">Created: 2025-05-24 Sat 18:06</p>
 </div>
 </body>
 </html>
