--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-24 Sat 17:29 -->
+<!-- 2025-05-24 Sat 18:06 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</title>
@@ -377,11 +377,11 @@ or <a href="https://srajma.github.io/xatra/examples/colonies/SEA_ROUTES.html">SE
 </p>
 
 <p style="float:left; margin-right:1em; width:1000px;">
-<img src="/img/xatra/indosphere_2.png" alt="indosphere_2.png" />
+<a href="/img/xatra/indosphere_2.png">img/xatra/indosphere_2.png</a>
 </p>
 
 <p style="float:left; margin-right:1em; width:1000px;">
-<img src="/img/xatra/searoutes_2.png" alt="searoutes_2.png" />
+<a href="/img/xatra/searoutes_2.png">img/xatra/searoutes_2.png</a>
 </p>
 </div>
 </div>
@@ -402,7 +402,7 @@ or <a href="https://srajma.github.io/xatra/examples/colonies/SEA_ROUTES.html">SE
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-24 Sat 17:29</p>
+<p class="date">Created: 2025-05-24 Sat 18:06</p>
 </div>
 </body>
 </html>
