--- a/xeet/history/suvarnabhumi.html
+++ b/xeet/history/suvarnabhumi.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-24 Sat 17:28 -->
+<!-- 2025-05-24 Sat 18:06 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Suvarṇabhūmī</title>
@@ -198,19 +198,19 @@
 <div id="content" class="content">
 <h1 class="title">Suvarṇabhūmī</h1>
 <p>
-Earliest recorded Indian rulers in Southeast Asia: - Kaundinya, Cambodia, 1st cen - Śrī Māra, S. Vietnam, 1st/2nd cen - Deva-varman, Java, 132 AD - Langkasuka, Malaya, ~100 AD For SEA to be so fully Indianized in the 2nd cen, trade and influence must have began much earlier. <img src="/img/suvarnabhumi/F3lS2LtWkAEmuV9.png" alt="F3lS2LtWkAEmuV9.png" />
+Earliest recorded Indian rulers in Southeast Asia: - Kaundinya, Cambodia, 1st cen - Śrī Māra, S. Vietnam, 1st/2nd cen - Deva-varman, Java, 132 AD - Langkasuka, Malaya, ~100 AD For SEA to be so fully Indianized in the 2nd cen, trade and influence must have began much earlier. <a href="/img/suvarnabhumi/F3lS2LtWkAEmuV9.png">img/suvarnabhumi/F3lS2LtWkAEmuV9.png</a>
 </p>
 
 <p>
-<img src="/img/suvarnabhumi/F3lS8XbWUAAhhIY.png" alt="F3lS8XbWUAAhhIY.png" />
+<a href="/img/suvarnabhumi/F3lS8XbWUAAhhIY.png">img/suvarnabhumi/F3lS8XbWUAAhhIY.png</a>
 </p>
 
 <p>
-<img src="/img/suvarnabhumi/F3lTJp7WoAAwUQQ.png" alt="F3lTJp7WoAAwUQQ.png" />
+<a href="/img/suvarnabhumi/F3lTJp7WoAAwUQQ.png">img/suvarnabhumi/F3lTJp7WoAAwUQQ.png</a>
 </p>
 
 <p>
-<img src="/img/suvarnabhumi/F3lTNTLW0AAFHaC.png" alt="F3lTNTLW0AAFHaC.png" />
+<a href="/img/suvarnabhumi/F3lTNTLW0AAFHaC.png">img/suvarnabhumi/F3lTNTLW0AAFHaC.png</a>
 </p>
 
 <p>
@@ -218,15 +218,15 @@ Founding legends of other Southeast Asian countries, other than the famous Kaund
 </p>
 
 <p>
-<img src="/img/suvarnabhumi/F3lTrhuXkAAktK1.png" alt="F3lTrhuXkAAktK1.png" />
+<a href="/img/suvarnabhumi/F3lTrhuXkAAktK1.png">img/suvarnabhumi/F3lTrhuXkAAktK1.png</a>
 </p>
 
 <p>
-<img src="/img/suvarnabhumi/F3lUa9VXsAEfJls.png" alt="F3lUa9VXsAEfJls.png" />
+<a href="/img/suvarnabhumi/F3lUa9VXsAEfJls.png">img/suvarnabhumi/F3lUa9VXsAEfJls.png</a>
 </p>
 
 <p>
-<img src="/img/suvarnabhumi/F3lU179WYAAPyQX.png" alt="F3lU179WYAAPyQX.png" />
+<a href="/img/suvarnabhumi/F3lU179WYAAPyQX.png">img/suvarnabhumi/F3lU179WYAAPyQX.png</a>
 </p>
 
 <p>
@@ -234,11 +234,11 @@ Oc-eo in Vietnam was an Indian trading colony from ~200 BC, and later part of Ka
 </p>
 
 <p>
-<img src="/img/suvarnabhumi/F3lWkrGWsAExicV.png" alt="F3lWkrGWsAExicV.png" />
+<a href="/img/suvarnabhumi/F3lWkrGWsAExicV.png">img/suvarnabhumi/F3lWkrGWsAExicV.png</a>
 </p>
 
 <p>
-<img src="/img/suvarnabhumi/F3lXP0nXAAEYBqv.png" alt="F3lXP0nXAAEYBqv.png" />
+<a href="/img/suvarnabhumi/F3lXP0nXAAEYBqv.png">img/suvarnabhumi/F3lXP0nXAAEYBqv.png</a>
 </p>
 
 <p>
@@ -246,7 +246,7 @@ Indian-Chinese maritime trade began in the 2nd cen BC. As Chinese vessels were t
 </p>
 
 <p>
-<img src="/img/suvarnabhumi/F3lYkLbXoAE9ala.png" alt="F3lYkLbXoAE9ala.png" />
+<a href="/img/suvarnabhumi/F3lYkLbXoAE9ala.png">img/suvarnabhumi/F3lYkLbXoAE9ala.png</a>
 </p>
 
 <p>
@@ -254,11 +254,11 @@ Other early Indian trading colonies in SEA. Pre-Indian Southeast Asians were pri
 </p>
 
 <p>
-<img src="/img/suvarnabhumi/F3lbe11XsAIcoAK.png" alt="F3lbe11XsAIcoAK.png" />
+<a href="/img/suvarnabhumi/F3lbe11XsAIcoAK.png">img/suvarnabhumi/F3lbe11XsAIcoAK.png</a>
 </p>
 
 <p>
-<img src="/img/suvarnabhumi/F3lbgxkWsAE8nTM.png" alt="F3lbgxkWsAE8nTM.png" />
+<a href="/img/suvarnabhumi/F3lbgxkWsAE8nTM.png">img/suvarnabhumi/F3lbgxkWsAE8nTM.png</a>
 </p>
 
 <p>
@@ -276,15 +276,15 @@ Based.
 </p>
 
 <p>
-<img src="/img/suvarnabhumi/F3ldx_FWYAAyAnA.png" alt="F3ldx_FWYAAyAnA.png" />
+<a href="/img/suvarnabhumi/F3ldx_FWYAAyAnA.png">img/suvarnabhumi/F3ldx_FWYAAyAnA.png</a>
 </p>
 
 <p>
-<img src="/img/suvarnabhumi/F3ldy3dWEAIG_Jf.png" alt="F3ldy3dWEAIG_Jf.png" />
+<a href="/img/suvarnabhumi/F3ldy3dWEAIG_Jf.png">img/suvarnabhumi/F3ldy3dWEAIG_Jf.png</a>
 </p>
 
 <p>
-<img src="/img/suvarnabhumi/F3ldy3dWEAIG_Jf 1.png" alt="F3ldy3dWEAIG_Jf 1.png" />
+<a href="/img/suvarnabhumi/F3ldy3dWEAIG_Jf 1.png">img/suvarnabhumi/F3ldy3dWEAIG_Jf 1.png</a>
 </p>
 
 <p>
@@ -292,7 +292,7 @@ Chinese texts say that Indian ships were much larger than theirs. (Majumdar says
 </p>
 
 <p>
-<img src="/img/suvarnabhumi/F3llGusX0AAt8Ua.png" alt="F3llGusX0AAt8Ua.png" />
+<a href="/img/suvarnabhumi/F3llGusX0AAt8Ua.png">img/suvarnabhumi/F3llGusX0AAt8Ua.png</a>
 </p>
 
 <p>
@@ -300,7 +300,7 @@ Funan and Campa expanded into formerly Chinese-controlled territory. By c. 350 
 </p>
 
 <p>
-<img src="/img/suvarnabhumi/F3lyiGSXUAAdXpe.png" alt="F3lyiGSXUAAdXpe.png" />
+<a href="/img/suvarnabhumi/F3lyiGSXUAAdXpe.png">img/suvarnabhumi/F3lyiGSXUAAdXpe.png</a>
 </p>
 
 <p>
@@ -308,7 +308,7 @@ Indianization in SEA suffered a set back in the Gupta period, and was re-invigor
 </p>
 
 <p>
-<img src="/img/suvarnabhumi/F3l0UxYX0AE8f6F.png" alt="F3l0UxYX0AE8f6F.png" />
+<a href="/img/suvarnabhumi/F3l0UxYX0AE8f6F.png">img/suvarnabhumi/F3l0UxYX0AE8f6F.png</a>
 </p>
 
 <p>
@@ -320,12 +320,12 @@ Summary map, a bit messy:
 </p>
 
 <p>
-<img src="/img/suvarnabhumi/F3mZXyPXYAApmVg.png" alt="F3mZXyPXYAApmVg.png" />
+<a href="/img/suvarnabhumi/F3mZXyPXYAApmVg.png">img/suvarnabhumi/F3mZXyPXYAApmVg.png</a>
 </p>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-24 Sat 17:28</p>
+<p class="date">Created: 2025-05-24 Sat 18:06</p>
 </div>
 </body>
 </html>
