--- a/xeet/politics/2024_election.html
+++ b/xeet/politics/2024_election.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-24 Sat 17:28 -->
+<!-- 2025-05-24 Sat 18:06 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>2024 lok sabha post-election thread</title>
@@ -238,7 +238,7 @@ That means getting RG &amp; Congress leadership on a helicopter, crackdown on al
 </ol>
 
 <p>
-<img src="/img/2024_ls_urban4.png" alt="2024_ls_urban4.png" />
+<a href="/img/2024_ls_urban4.png">img/2024_ls_urban4.png</a>
 </p>
 
 <ol class="org-ol">
@@ -250,15 +250,15 @@ That means getting RG &amp; Congress leadership on a helicopter, crackdown on al
 </ol>
 
 <p>
-<img src="/img/2024_ls_urban2.png" alt="2024_ls_urban2.png" />
+<a href="/img/2024_ls_urban2.png">img/2024_ls_urban2.png</a>
 </p>
 
 <p>
-<img src="/img/2024_ls_urban3.png" alt="2024_ls_urban3.png" />
+<a href="/img/2024_ls_urban3.png">img/2024_ls_urban3.png</a>
 </p>
 
 <p>
-<img src="/img/2024_ls_urban1.png" alt="2024_ls_urban1.png" />
+<a href="/img/2024_ls_urban1.png">img/2024_ls_urban1.png</a>
 </p>
 
 <ol class="org-ol">
@@ -351,7 +351,7 @@ useless kings like Ben Shapiro, who only exist to perform for their own audience
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-24 Sat 17:28</p>
+<p class="date">Created: 2025-05-24 Sat 18:06</p>
 </div>
 </body>
 </html>
