--- a/xeet/politics/advice/anti_religion.html
+++ b/xeet/politics/advice/anti_religion.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-24 Sat 17:29 -->
+<!-- 2025-05-24 Sat 18:06 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Doing propaganda against an enemy religion</title>
@@ -222,7 +222,7 @@ Abhorrent shitlib bullying, but it gets its job done: makes men seeking a tradit
 </p>
 
 <p>
-<img src="/img/dont_worry_darling.jpg" alt="dont_worry_darling.jpg" />
+<a href="/img/dont_worry_darling.jpg">img/dont_worry_darling.jpg</a>
 </p>
 
 <p>
@@ -250,12 +250,12 @@ Also OT but the use of the &ldquo;kheti&rdquo; quote as an own is embarrassing, 
 </p>
 
 <p>
-<img src="/img/seed_sow.jpg" alt="seed_sow.jpg" />
+<a href="/img/seed_sow.jpg">img/seed_sow.jpg</a>
 </p>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-24 Sat 17:29</p>
+<p class="date">Created: 2025-05-24 Sat 18:06</p>
 </div>
 </body>
 </html>
