--- a/xeet/politics/new-arya-man/diet1.html
+++ b/xeet/politics/new-arya-man/diet1.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-24 Sat 17:29 -->
+<!-- 2025-05-24 Sat 18:06 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Diet thread 1</title>
@@ -220,10 +220,10 @@ This tiring veg non-veg debate will never end, but I will do my best
 </ol>
 
 <p>
-<img src="/img/diet/F7W5EjOXgAALX6R.jpg" alt="F7W5EjOXgAALX6R.jpg" />
-<img src="/img/diet/F7W6HE2WUAABaFK.png" alt="F7W6HE2WUAABaFK.png" />
-<img src="/img/diet/F7W6IiIW4AA5mrA.jpg" alt="F7W6IiIW4AA5mrA.jpg" />
-<img src="/img/diet/F7W6JbOXIAAMARG.jpg" alt="F7W6JbOXIAAMARG.jpg" />
+<a href="/img/diet/F7W5EjOXgAALX6R.jpg">img/diet/F7W5EjOXgAALX6R.jpg</a>
+<a href="/img/diet/F7W6HE2WUAABaFK.png">img/diet/F7W6HE2WUAABaFK.png</a>
+<a href="/img/diet/F7W6IiIW4AA5mrA.jpg">img/diet/F7W6IiIW4AA5mrA.jpg</a>
+<a href="/img/diet/F7W6JbOXIAAMARG.jpg">img/diet/F7W6JbOXIAAMARG.jpg</a>
 </p>
 
 <ol class="org-ol">
@@ -232,7 +232,7 @@ This tiring veg non-veg debate will never end, but I will do my best
 </ol>
 
 <p>
-<img src="/img/diet/F7W7HTxXsAARIlB.png" alt="F7W7HTxXsAARIlB.png" />
+<a href="/img/diet/F7W7HTxXsAARIlB.png">img/diet/F7W7HTxXsAARIlB.png</a>
 </p>
 
 <ol class="org-ol">
@@ -285,7 +285,7 @@ Micro guidance would be: among fruits, eat pomegranates/darkly-colored things am
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-24 Sat 17:29</p>
+<p class="date">Created: 2025-05-24 Sat 18:06</p>
 </div>
 </body>
 </html>
