--- a/xeet/politics/positive-vision/policy.html
+++ b/xeet/politics/positive-vision/policy.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-24 Sat 17:29 -->
+<!-- 2025-05-24 Sat 18:06 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Policy wishlist</title>
@@ -221,10 +221,10 @@
 <li>End FSI/FAR regulations</li>
 <li>Fix the cities</li>
 
-<li><a href="/xeet/politics/positive-vision/reservations.org">My genius plan to end reservations</a></li>
+<li><a href="/xeet/politics/positive-vision/reservations.html">My genius plan to end reservations</a></li>
 <li>End stubble-burning</li>
 <li>End WAQF</li>
-<li><a href="/xeet/politics/new-arya-man/media_code.org">Media incentives for cultural/lifestyle/aesthetic codes</a></li>
+<li><a href="/xeet/politics/new-arya-man/media_code.html">Media incentives for cultural/lifestyle/aesthetic codes</a></li>
 </ul>
 </div>
 </div>
@@ -234,13 +234,13 @@
 <ul class="org-ul">
 <li>Increase Birth Rate to &gt;3.0</li>
 <li>Fix Indians&rsquo; diet/lifestyle</li>
-<li><a href="/xeet/politics/new-arya-man/teach_arthasastra.org">Fix Indians&rsquo; raita-ness problem</a></li>
+<li><a href="/xeet/politics/new-arya-man/teach_arthasastra.html">Fix Indians&rsquo; raita-ness problem</a></li>
 <li>End Pakistan.</li>
 
 <li>Bvild a LOT of HSR</li>
 <li>Bvild a LOT more cities</li>
 <li>Fix the rivers</li>
-<li><a href="/xeet/politics/positive-vision/climate_control.org">Industrialized climate control</a></li>
+<li><a href="/xeet/politics/positive-vision/climate_control.html">Industrialized climate control</a></li>
 </ul>
 </div>
 </div>
@@ -256,7 +256,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-24 Sat 17:29</p>
+<p class="date">Created: 2025-05-24 Sat 18:06</p>
 </div>
 </body>
 </html>
