--- a/xeet/politics/sindoor.html
+++ b/xeet/politics/sindoor.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-24 Sat 17:29 -->
+<!-- 2025-05-24 Sat 18:06 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Operation Sindoor concluding thoughts</title>
@@ -249,7 +249,7 @@ My only regret is that we have but 543 seats to give to the Priest-King.
 </p>
 
 <p>
-<img src="/img/juggling.png" alt="juggling.png" />
+<a href="/img/juggling.png">img/juggling.png</a>
 </p>
 </div>
 </div>
@@ -278,12 +278,12 @@ And complacency among people, so likely won&rsquo;t even ramp up defense product
 </div>
 </div>
 <div id="outline-container-orgd9e7833" class="outline-2">
-<h2 id="orgd9e7833"><span class="section-number-2">4.</span> <a href="/xeet/politics/positive-vision/pmc.org">Private military corporations</a></h2>
+<h2 id="orgd9e7833"><span class="section-number-2">4.</span> <a href="/xeet/politics/positive-vision/pmc.html">Private military corporations</a></h2>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-24 Sat 17:29</p>
+<p class="date">Created: 2025-05-24 Sat 18:06</p>
 </div>
 </body>
 </html>
