--- a/history/foreign/silkrd.html
+++ b/history/foreign/silkrd.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-24 Sat 17:28 -->
+<!-- 2025-05-24 Sat 18:06 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>The Sanskritization of the Silk Road 🏗️</title>
@@ -244,7 +244,7 @@ Subsequently Alexander encounters a certain &ldquo;Sophytes&rdquo; &#x2013; who 
 </p>
 
 <p>
-<img src="/img/foreign/sophytes.png" alt="sophytes.png" />
+<a href="/img/foreign/sophytes.png">img/foreign/sophytes.png</a>
 </p>
 
 <p>
@@ -397,7 +397,7 @@ There are elaborate descriptions given of the Vrātyas in Vedic literature &#x20
 </p></div></div>
 
 <div class="footdef"><sup><a id="fn.ii" class="footnum" href="#fnr.ii" role="doc-backlink">2</a></sup> <div class="footpara" role="doc-footnote"><p class="footpara">
-<img src="/img/foreign/vratya.jpg" alt="vratya.jpg" />
+<a href="/img/foreign/vratya.jpg">img/foreign/vratya.jpg</a>
 </p></div></div>
 
 
@@ -405,7 +405,7 @@ There are elaborate descriptions given of the Vrātyas in Vedic literature &#x20
 </div></div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-24 Sat 17:28</p>
+<p class="date">Created: 2025-05-24 Sat 18:06</p>
 </div>
 </body>
 </html>
