--- a/history/old/vikramaditya.html
+++ b/history/old/vikramaditya.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-24 Sat 17:28 -->
+<!-- 2025-05-24 Sat 18:06 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Vikramaditya; reconstructing the interregnum of 57 BC &#x2013; 78 AD</title>
@@ -1149,7 +1149,7 @@ The Ayudhajivi Sanghas (war-like republics/corporations) that ruled East of the 
 </p>
 
 <p>
-<img src="/img/stock photos/ayudhajivi.jpeg" alt="ayudhajivi.jpeg" />
+<a href="/img/stock photos/ayudhajivi.jpeg">img/stock photos/ayudhajivi.jpeg</a>
 </p>
 
 <p>
@@ -1314,7 +1314,7 @@ Vincent A Smith (MRAS, Indian Civil Service), Article 29 &ldquo;The conquests of
 </div></div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-24 Sat 17:28</p>
+<p class="date">Created: 2025-05-24 Sat 18:06</p>
 </div>
 </body>
 </html>
