--- a/xeet/politics/kayfabe.html
+++ b/xeet/politics/kayfabe.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-24 Sat 17:29 -->
+<!-- 2025-05-24 Sat 18:06 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>The world of words and the world of things</title>
@@ -238,15 +238,15 @@ They live in the world of kayfabe, rather than understanding the levers that tru
 </p>
 
 <p>
-<img src="/img/kayfabe/1.png" alt="1.png" />
+<a href="/img/kayfabe/1.png">img/kayfabe/1.png</a>
 </p>
 
 <p>
-<img src="/img/kayfabe/2.png" alt="2.png" />
+<a href="/img/kayfabe/2.png">img/kayfabe/2.png</a>
 </p>
 
 <p>
-<img src="/img/kayfabe/3.png" alt="3.png" />
+<a href="/img/kayfabe/3.png">img/kayfabe/3.png</a>
 </p>
 
 <p>
@@ -277,7 +277,7 @@ In reality it&rsquo;s actually getting things done which takes the most effort, 
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-24 Sat 17:29</p>
+<p class="date">Created: 2025-05-24 Sat 18:06</p>
 </div>
 </body>
 </html>
