--- a/xeet/politics/new-arya-man/diet2.html
+++ b/xeet/politics/new-arya-man/diet2.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-24 Sat 17:29 -->
+<!-- 2025-05-24 Sat 18:06 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>THE OFFICIAL DIET FOR THE NEW ĀRYA MAN</title>
@@ -348,7 +348,7 @@ Diagram shows the macronutrients, i.e. the bulk of your food, which you can see
 </p>
 
 <p>
-<img src="/img/diet2/macros.png" alt="macros.png" />
+<a href="/img/diet2/macros.png">img/diet2/macros.png</a>
 </p>
 
 <p>
@@ -439,7 +439,7 @@ Allium (onion and garlic) and cruciferous (those in green below) are the best am
 </p>
 
 <p>
-<img src="/img/diet2/vegetables.png" alt="vegetables.png" />
+<a href="/img/diet2/vegetables.png">img/diet2/vegetables.png</a>
 </p></li>
 
 <li><p>
@@ -447,7 +447,7 @@ Walnuts and pecans are the best among nuts. Cancer cell proliferation under each
 </p>
 
 <p>
-<img src="/img/diet2/nuts.png" alt="nuts.png" />
+<a href="/img/diet2/nuts.png">img/diet2/nuts.png</a>
 </p>
 
 <p>
@@ -455,11 +455,11 @@ Antioxidant activity of each nut:
 </p>
 
 <p>
-<img src="/img/diet2/nuts1.png" alt="nuts1.png" />
+<a href="/img/diet2/nuts1.png">img/diet2/nuts1.png</a>
 </p>
 
 <p>
-<img src="/img/diet2/nuts2.png" alt="nuts2.png" />
+<a href="/img/diet2/nuts2.png">img/diet2/nuts2.png</a>
 </p>
 
 <p>
@@ -487,7 +487,7 @@ And there is one, single, god-tier food in the world that you must consume if no
 </p>
 
 <p>
-<img src="/img/diet2/amla.png" alt="amla.png" />
+<a href="/img/diet2/amla.png">img/diet2/amla.png</a>
 </p>
 
 <p>
@@ -602,7 +602,7 @@ Yes sār, even the oil in your vegetarian restaurant is filled with grease from 
 </p>
 
 <p class="footpara">
-<img src="/img/diet2/cvckoil.png" alt="cvckoil.png" />
+<a href="/img/diet2/cvckoil.png">img/diet2/cvckoil.png</a>
 </p>
 
 <p class="footpara">
@@ -675,7 +675,7 @@ These are from a guy called Michael Greger who runs a website called <a href="ht
 </div></div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-24 Sat 17:29</p>
+<p class="date">Created: 2025-05-24 Sat 18:06</p>
 </div>
 </body>
 </html>
