--- a/xeet/politics/positive-vision/reservations.html
+++ b/xeet/politics/positive-vision/reservations.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-24 Sat 17:29 -->
+<!-- 2025-05-24 Sat 18:06 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>My genius plan to end reservations</title>
@@ -214,7 +214,7 @@ I just saved Indian civilization. You&rsquo;re welcome.
 </p>
 
 <p>
-<img src="/img/caste_trade.jpeg" alt="caste_trade.jpeg" />
+<a href="/img/caste_trade.jpeg">img/caste_trade.jpeg</a>
 </p>
 
 <p>
@@ -235,7 +235,7 @@ Uproar from Dalit leaders (state agents), protests orchestrated, case reaches SC
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-24 Sat 17:29</p>
+<p class="date">Created: 2025-05-24 Sat 18:06</p>
 </div>
 </body>
 </html>
