--- a/xeet/politics/world-models/bottleneck.html
+++ b/xeet/politics/world-models/bottleneck.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-05-24 Sat 17:29 -->
+<!-- 2025-05-24 Sat 18:06 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Bottleneck</title>
@@ -242,12 +242,12 @@ As for 1, my main complaints are:
 </ol>
 
 <p>
-<a href="/xeet/politics/world-models/world_model.org">xeet/politics/world-models/world_model.org</a>
+<a href="/xeet/politics/world-models/world_model.html">xeet/politics/world-models/world_model.org</a>
 </p>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-05-24 Sat 17:29</p>
+<p class="date">Created: 2025-05-24 Sat 18:06</p>
 </div>
 </body>
 </html>
